Fixed responsive on tablet

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   .mini-card {
-    @apply hover:card flex gap-4 items-center shadow-lg justify-start transition-all ease-in-out duration-200 py-2 px-4;
+    @apply hover:card flex gap-4 items-center justify-start transition-all ease-in-out duration-200 py-2 px-4;
   }
 
   .button {
